# djcrm

./: .gitignore  pyproject.toml  requirements.txt  runserver.sh
djcrm/: settings.py
djcrm/agents/templates/agents/: agent_create.html  agent_delete.html  agent_update.html
djcrm/djcrm/: .template.env  settings.py  urls.py
djcrm/leads/: forms.py  models.py  urls.py  views.py
djcrm/leads/migrations/: 0001_initial.py
djcrm/leads/templates/leads/: assign_agent.html  lead_category_update.html  lead_create.html  lead_delete.html  lead_detail.html  lead_list.html  lead_update.html
djcrm/templates/: base.html  landing.html  navbar.html
djcrm/templates/leads/: home_page.html
djcrm/templates/registration/: password_reset_confirm.html  signup.html
leads/migrations/: 0002_auto_20210208_2311.py
static_root/: staticfiles.json
templates/: base.html
templates/registration/: login.html  password_reset_form.html
