[tool.poetry]
name = "pytyt"
version = "0.1.0"
description = ""
authors = ["jumaniyozov <jumaniyozovse@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.6"
black = "^20.8b1"
Pillow = "^8.1.0"
django-crispy-forms = "^1.11.0"
crispy-tailwind = "^0.2.0"
django-environ = "^0.4.5"
psycopg2 = "^2.8.6"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
