[tool.poetry]
name = "pytyt"
version = "0.1.0"
description = ""
authors = ["Islom <jumaniyozovse@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "^1.4.4"
asgiref = "^3.3.1"
click = "^7.1.2"
crispy-tailwind = "^0.2.0"
django-crispy-forms = "^1.11.0"
django-environ = "^0.4.5"
Django = "^3.1.6"
mypy-extensions = "^0.4.3"
pathspec = "^0.8.1"
Pillow = "^8.1.0"
psycopg2 = "^2.8.6"
pytz = "^2021.1"
regex = "^2020.11.13"
sqlparse = "^0.4.1"
toml = "^0.10.2"
typed-ast = "^1.4.2"
typing-extensions = "^3.7.4"
whitenoise = "^5.2.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
